tests/paczka1/small_fuzzy/50107450.err
Error in line 6: 5YbujD S725 13,0
Error in line 13: 5YbujD A83 42,2
